--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 .l-body-container {
-    max-width: 1000px;
+    width: 1000px;
     background-color: #f2e4bb;
     padding: 0;
     margin: 0;
